added functionality to log gc